[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/CustomFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/ship_0000.png" type="Texture" id=3]
[ext_resource path="res://Assets/UbuntuCondensed-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/Menu.gd" type="Script" id=5]
[ext_resource path="res://Assets/ship_0005.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipBlue" type="Sprite" parent="."]
position = Vector2( 512, 88 )
scale = Vector2( 2, 2 )
z_index = 2
texture = ExtResource( 3 )

[node name="Sprite" parent="." instance=ExtResource( 1 )]
scale = Vector2( 2.22609, 1.8 )
region_rect = Rect2( 0, 0, 460.753, 320 )

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 144.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 1 )
text = "Plane Run"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -184.0
margin_right = 58.0
margin_bottom = -144.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ship0005" type="Sprite" parent="."]
position = Vector2( 448, 304 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="Ship0008" type="Sprite" parent="."]
position = Vector2( 480, 352 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="Ship0009" type="Sprite" parent="."]
position = Vector2( 568, 288 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="Ship0006" type="Sprite" parent="."]
position = Vector2( 504, 280 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="Ship0007" type="Sprite" parent="."]
position = Vector2( 528, 320 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )

[node name="HighScore" type="Label" parent="."]
anchor_right = 1.0
margin_top = 216.0
margin_bottom = 237.0
custom_fonts/font = ExtResource( 2 )
text = "High Score: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 448.0
margin_top = 448.0
margin_right = 570.0
margin_bottom = 488.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
